# a2a-settlement-mcp

./: .env.example  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  smoke_test.py
examples/: claude_desktop.md  cursor_config.md  programmatic.py
src/a2a_settlement_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_server.py
